--- a/my-app/amplify/backend/backend-config.json
+++ b/my-app/amplify/backend/backend-config.json
@@ -25,5 +25,22 @@
         ]
       }
     }
+  },
+  "api": {
+    "adGameAPI": {
+      "service": "AppSync",
+      "providerPlugin": "awscloudformation",
+      "output": {
+        "authConfig": {
+          "defaultAuthentication": {
+            "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+            "userPoolConfig": {
+              "userPoolId": "authadtrackergamec14c0074"
+            }
+          },
+          "additionalAuthenticationProviders": []
+        }
+      }
+    }
   }
 }
