got the list of tracker domains to be available to background.js

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -23,7 +23,7 @@
     ],
     "background": {
         "scripts": [
-            "background.js"
+            "background.js","trackerlist.js"
         ]
     
     }
