--- a/chrome-extension-v2/package.json
+++ b/chrome-extension-v2/package.json
@@ -1,6 +1,18 @@
 {
-    "dependencies": {
-        "express": "^4.17.2",
-        "socket.io": "^4.4.1"
-    }
+  "name": "adtrackergame",
+  "version": "1.0.0",
+  "description": "",
+  "main": "popup.js",
+  "dependencies": {
+    "express": "^4.17.2",
+    "mongodb": "^4.3.1",
+    "nodemon": "^2.0.15",
+    "socket.io": "^4.4.1"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
