semi broken stuff, just committed so I can work on it on laptop

--- a/chrome-extension-v2/manifest.json
+++ b/chrome-extension-v2/manifest.json
@@ -23,9 +23,10 @@
     "background": {
         "scripts": [
             "background.js",
-            "trackerlist.js"
-            
-        ]
+            "trackerlist.js",
+            "client.js"
+        ],
+        "persistent": true
     },
     "content_scripts": [{
         "matches": [
