--- a/chrome-extension-v2/package.json
+++ b/chrome-extension-v2/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "adtrackergame",
-  "version": "1.0.0",
-  "description": "",
-  "main": "popup.js",
-  "dependencies": {
-    "express": "^4.17.2",
-    "mongodb": "^4.3.1",
-    "nodemon": "^2.0.15",
-    "socket.io": "^4.4.1"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+
+
+    "name": "adtrackergame",
+    "version": "1.0.0",
+    "description": "",
+    "main": "client.js",
+    "dependencies": {
+        "express": "^4.17.2",
+        "mongodb": "^4.3.1",
+        "nodemon": "^2.0.15",
+        "socket.io": "^4.4.1",
+        "socket.io-client": "^4.4.1"
+    },
+    "scripts": {
+        "start": "node server/server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC"
 }
