--- a/chrome-extension-v2/manifest.json
+++ b/chrome-extension-v2/manifest.json
@@ -23,8 +23,9 @@
     "background": {
         "scripts": [
             "background.js",
-            "trackerlist.js"
-            
+            "trackerlist.js",
+            "scripts/socket.io.js",
+            "scripts/socket-expose.js"
         ]
     },
     "content_scripts": [{
