--- a/chrome-extension-v2/package.json
+++ b/chrome-extension-v2/package.json
@@ -7,7 +7,8 @@
     "express": "^4.17.2",
     "mongodb": "^4.3.1",
     "nodemon": "^2.0.15",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1"
   },
   "devDependencies": {},
   "scripts": {
