--- a/chrome-extension-v2/package.json
+++ b/chrome-extension-v2/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "express": "^4.17.2",
     "mongodb": "^4.3.1",
+    "mysqli": "^3.1.4",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1"
