--- a/chrome-extension-v2/manifest.json
+++ b/chrome-extension-v2/manifest.json
@@ -22,10 +22,12 @@
     ],
     "background": {
         "scripts": [
+            "scripts/setup.js",
             "background.js",
             "scripts/trackerlist.js",
             "scripts/socket.io.js",
             "scripts/socket-expose.js"
+
         ]
     },
     "content_scripts": [{
